chaos-jr/policy-template.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: TEMP_NAME
  namespace: chaos-jr
spec:
  podSelector:
    matchLabels:
      TEMP_LABEL_NAME: TEMP_LABEL_VAL
  policyTypes:
  - Ingress
  - Egress
